--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2",
     "xmlhttprequest": "^1.8.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-arm64-musl": "4.9.5",
+    "@rollup/rollup-linux-arm64-gnu": "4.9.5"
   }
 }
