Se agrega archivo config de karma y jest

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:app-foro": "node dist/app-foro/server/server.mjs"
+    "test": "jest --runInBand",
+    "test:ci": "jest --ci --coverage",
+    "serve:ssr:app-foro": "node dist/app-foro/server/server.mjs",
+    "sonar": "sonar-scanner"
   },
   "private": true,
   "dependencies": {
@@ -36,13 +38,20 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jasmine-core": "^5.7.0",
+    "jest": "^29.7.0",
+    "jest-extended": "^4.0.2",
+    "jest-preset-angular": "^14.5.5",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "sonar-scanner": "^3.1.0",
+    "sonarqube-scanner": "^4.3.0",
+    "ts-jest": "^29.3.2",
     "typescript": "~5.4.2",
     "xmlhttprequest": "^1.8.0"
   },
